# airchainpay

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  package-lock.json
.cargo/: config.toml
.github/workflows/: ci-cd.yml
airchainpay-contracts/: .gitignore  01-USDC_USDT_DEPLOYMENT_STATUS.md  03-README_OFFLINE_TRANSACTIONS.md  README.md  hardhat.config.js  package-lock.json  package.json
airchainpay-contracts/contracts/: AirChainPay.sol  AirChainPayToken.sol  MockERC20.sol  P2PEscrow.sol
airchainpay-contracts/deployments/: all-chains.json  base_sepolia-token.json  base_sepolia.json  core_testnet-token.json  core_testnet.json
airchainpay-contracts/scripts/: check-base-sepolia.js  check-core-mainnet.js  check-core-testnet.js  check-holesky.js  check-lisk-sepolia.js  configure-tokens-base-sepolia.js  configure-tokens-core-testnet.js  configure-tokens-holesky.js  configure-tokens-lisk-sepolia.js  (+14 more)
airchainpay-relay-rust/: .gitignore
airchainpay-relay-rust/airchainpay-relay/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  env.staging
airchainpay-relay-rust/airchainpay-relay/examples/: comprehensive_test.rs  config_validation.rs  contract_integration.rs  error_handling_test.rs
airchainpay-relay-rust/airchainpay-relay/scripts/: createkeys.sh  deploy.sh  deploy_to_test.sh  docker-deploy.sh  generate_keys.sh  generate_secrets.sh  monitor.sh  test-animation.sh
airchainpay-relay-rust/airchainpay-relay/src/: lib.rs  main.rs
airchainpay-relay-rust/airchainpay-relay/src/abi/: AirChainPay.json  AirChainPayToken.json
airchainpay-relay-rust/airchainpay-relay/src/api/: mod.rs
airchainpay-relay-rust/airchainpay-relay/src/api/handlers/: mod.rs  transaction.rs
airchainpay-relay-rust/airchainpay-relay/src/app/: mod.rs  scheduler.rs  transaction_service.rs
airchainpay-relay-rust/airchainpay-relay/src/domain/: auth.rs  error.rs  mod.rs  security.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/: config.rs  logger.rs  mod.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/blockchain/: ethereum.rs  manager.rs  mod.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/monitoring/: manager.rs  mod.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/storage/: file_storage.rs  mod.rs
airchainpay-relay-rust/airchainpay-relay/src/middleware/: critical_error_middleware.rs  error_handling.rs  input_validation.rs  ip_whitelist.rs  metrics.rs  mod.rs  rate_limiting.rs  security.rs
airchainpay-relay-rust/airchainpay-relay/src/proto/: transaction.proto
airchainpay-relay-rust/airchainpay-relay/src/scripts/: mod.rs
airchainpay-relay-rust/airchainpay-relay/src/utils/: animated_ascii.rs  audit.rs  backup.rs  cache.rs  cleanup.rs  compressor.rs  critical_error_handler.rs  database.rs  error_handler.rs  mod.rs  prometheus.rs  protobuf_compressor.rs  sanitizer.rs
airchainpay-relay-rust/airchainpay-relay/src/validators/: mod.rs  transaction_validator.rs
airchainpay-wallet/: .gitignore  01-TECHNICAL_ARCHITECTURE.md  02-COLLABORATOR_GUIDE.md  03-DEVELOPMENT_QUICK_REFERENCE.md  04-SECURITY_MEASURES.md  05-CROSS_WALLET_SECURITY.md  06-GAS_PRICE_SECURITY.md  07-TP_BLE_ADVERTISER_MIGRATION.md  08-BLE_PERMISSION_FIXES.md  09-OFFLINE_TRANSACTION_EXPIRY.md  10-IMPLEMENTATION_SUMMARY.md  11-OFFLINE_VERIFICATION_GUIDE.md  12-OFFLINE_VERIFICATION_CHECKLIST.md  README.md  app.config.js  app.json  babel.config.js  env.example  metro.config.js  package-lock.json  package.json
airchainpay-wallet-core/: Cargo.toml  README.md  build.rs
airchainpay-wallet-core/scripts/: build-android.sh  cargo.sh  ndk.sh
airchainpay-wallet-core/src/: ffi.rs  lib.rs  no_std.rs  wasm.rs
airchainpay-wallet-core/src/application/: mod.rs
airchainpay-wallet-core/src/application/use_cases/: mod.rs
airchainpay-wallet-core/src/core/: mod.rs
airchainpay-wallet-core/src/core/ble/: mod.rs
airchainpay-wallet-core/src/core/crypto/: README.md  mod.rs  security_audit.rs
airchainpay-wallet-core/src/core/crypto/encryption/: encrypted_data.rs  encryption_algorithm.rs  encryption_manager.rs  mod.rs
airchainpay-wallet-core/src/core/crypto/hashing/: hash_algorithm.rs  hash_manager.rs  mod.rs
airchainpay-wallet-core/src/core/crypto/keys/: key_manager.rs  mod.rs  secure_private_key.rs  secure_seed_phrase.rs
airchainpay-wallet-core/src/core/crypto/password/: mod.rs  password_algorithm.rs  password_config.rs  password_hasher.rs
airchainpay-wallet-core/src/core/crypto/signatures/: mod.rs  signature_manager.rs  transaction_signature.rs
airchainpay-wallet-core/src/core/storage/: mod.rs
airchainpay-wallet-core/src/core/transactions/: mod.rs
airchainpay-wallet-core/src/core/wallet/: mod.rs
airchainpay-wallet-core/src/domain/: mod.rs  services.rs
airchainpay-wallet-core/src/domain/entities/: mod.rs  network.rs  token.rs  wallet.rs
airchainpay-wallet-core/src/domain/repositories/: mod.rs  storage_repository.rs  transaction_repository.rs  wallet_repository.rs
airchainpay-wallet-core/src/infrastructure/: mod.rs
airchainpay-wallet-core/src/infrastructure/platform/: mod.rs
airchainpay-wallet-core/src/shared/: constants.rs  error.rs  mod.rs  types.rs  utils.rs
(+116 files in other folders)
