[workspace]
members = [
    "airchainpay-relay-rust/airchainpay-relay",
    "airchainpay-wallet-core"
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false 