[package]
name = "airchainpay-wallet-core"
version = "0.1.0"
edition = "2021"
authors = ["Rjay Solamo"]
description = "Enterprise-grade secure wallet core for AirChainPay - handles all cryptographic operations and sensitive data management"
license = "MIT"
repository = "https://github.com/Hurotamo/airchainpay-wallet-core"
keywords = ["wallet", "cryptocurrency", "blockchain", "security", "crypto"]
categories = ["cryptography", "blockchain", "security"]
readme = "README.md"

[lib]
name = "airchainpay_wallet_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }
# If reqwest is present, prefer rustls-tls for Android cross-compatibility
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
dirs = "6.0.0"
rpassword = "7.4.0"
bip39 = "2.2.0"
bip32 = "0.5.3"
serde_json = "1.0.142"
hex = "0.4.3"
# Cryptographic libraries - Updated to latest versions
secp256k1 = { version = "0.31.1", features = ["rand", "recovery"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
aes = "0.8.4"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
rand = { version = "0.8.5", features = ["std"] }
rand_core = { version = "0.6.4", features = ["std"] }
ripemd = "0.1.3"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"
# Logging
log = "0.4.27"
env_logger = "0.11.8"
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.88"
# Memory safety
zeroize = "1.8.1"
# FFI support
libc = "0.2.174"
# Utilities
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"
uuid = { version = "1.17.0", features = ["v4"] }
# Metrics and monitoring
prometheus = "0.14.0"
metrics = "0.24.2"
# Configuration
config = "0.15.13"
dotenv = "0.15.0"
# Time handling
time = "0.3.41"
# Compression
flate2 = "1.1.2"
rlp = "0.6.1"
ethers = { version = "2.0.14", default-features = false, features = ["rustls"] }
# BLE support
bluest = "0.6.9"
futures = "0.3.31"
arrayref = "0.3.9"
futures-lite = "2.6.1"

[target.'cfg(target_os = "android")'.dependencies]
bluest = { version = "0.6.9", features = ["unstable"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
sys-info = "0.9.1"

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
arbitrary = "1.4.1"
tokio-test = "0.4.4"
mockall = "0.13.1"
tempfile = "3.20.0"

[features]
default = ["std", "ffi"]
std = []
no_std = []
ffi = []
wasm = []
hardware_wallet = []
multi_sig = []
advanced_ble = []
metrics = []

# Build scripts
[build-dependencies]
vergen = "9.0.6"

# Documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# CI/CD
[package.metadata.ci]
rust-version = "1.70"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"] 
