[package]
name = "airchainpay-relay"
version = "1.0.0"
edition = "2021"

[lib]
name = "airchainpay_relay"
path = "src/lib.rs"

[[bin]]
name = "test_server"
path = "src/bin/test_server.rs"

[[bin]]
name = "generate_secrets"
path = "src/bin/generate_secrets.rs"



[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
hex = "0.4.3"
sha2 = "0.10.9"
rand = "0.9.2"
flate2 = "1.1.2"
tar = "0.4.44"
reqwest = { version = "0.12.22", features = ["json"] }
ethers = { version = "2.0.14", features = ["celo", "ws", "rustls"] }
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
# Protobuf and CBOR dependencies
prost = "0.14.1"
prost-types = "0.14.1"
bytes = "1.10.1"
cbor4ii = { version = "1.0.0", features = ["serde1"] }
lz4 = "1.28.1"
# Input validation and sanitization dependencies
regex = "1.11.1"
lazy_static = "1.5.0"
# Additional dependencies
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
tracing-appender = "0.2.3"
futures = "0.3.31"
tracing = "0.1.41"
# web3 = "0.19.0"  # Removed - using ethers instead
tonic = "0.14.0"
sysinfo = "0.36.1"
hostname = "0.4.1"
log = "0.4.27"
actix-service = "2.0.3"
notify = "8.1.0"
base64 = "0.22.1"
aes-gcm = "0.10.3"
rlp = "0.6.1"
colored = "3.0.0"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
tokio-test = "0.4.4"
